# ApexCortex-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: decision_1761929641.json  manifest_1761929641.json  metrics_1761929641.json  model_1761929641.pkl
src/apex_cortex/demo/: artifacts.py  data.py  features.py  governance.py  model.py  pipeline.py  run.py
src/apex_cortex/interfaces/: features.py  governance.py  market_data.py  regimes.py  registry.py  validation.py
src/apex_cortex/validation/: metrics.py  wf_cv.py
tests/: test_demo_pipeline.py
