
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-cortex-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.0", "numpy>=1.24.0", "scikit-learn>=1.3.0", "pytest>=7.0.0", "tabulate>=0.9.0"]

[tool.setuptools.packages.find]
where = ["src"]
